Fix display collapse by restoring theme styles and removing recursive include
- Renamed `assets/css/style.css` to `assets/css/style.scss` and added theme import to ensure base theme styles are loaded alongside custom video container styles.
- Removed `_includes/head.html` which caused infinite recursion and prevented proper loading of theme resources.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,8 @@
+---
+---
+
+@import "{{ site.theme }}";
+
 .video-container {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 aspect ratio */
